# scc-trait

./: Cargo.toml  README.md
src/: lib.rs  tarjan.rs
