[package]
name = "scc-trait"
version = "1.0.0"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
categories = ["algorithms"]
keywords = ["strongly", "connected", "components", "scc", "tarjan"]
license = "MIT/Apache-2.0"
description = "Trait-based Strongly Connected Components Calculation"
documentation = "https://docs.rs/scc-trait"
repository = "https://github.com/timothee-haudebourg/scc-trait"
readme = "README.md"